--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8611,6 +8611,7 @@
     <Content Include="Areas\Banco\Views\ChequeBanco\Modificar.cshtml" />
     <Content Include="Areas\Banco\Views\ChequeBanco\Anular.cshtml" />
     <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque.cshtml" />
+    <Content Include="Areas\Inventario\Views\EgresoInventario\_CmbProducto_EgresoInventario.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
