--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8615,6 +8615,9 @@
     <Content Include="Areas\Inventario\Views\EgresoInventario\_CmbProducto_EgresoInventario.cshtml" />
     <Content Include="Areas\Banco\Views\TalonarioChequeBanco\Anular.cshtml" />
     <Content Include="Areas\Banco\Views\TalonarioChequeBanco\Modificar.cshtml" />
+    <Content Include="Areas\Banco\Views\ChequeBanco\_CmbPersona_ChequeBanco.cshtml" />
+    <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque_op_x_cruzar.cshtml" />
+    <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque_op.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
