--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Reportes\Inventario\INV_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Bus.cs" />
+    <Compile Include="Reportes\Inventario\INV_008_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_001_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_002_Bus.cs" />
