--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8630,6 +8630,24 @@
     <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque_op_x_cruzar.cshtml" />
     <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque_op.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROl_014.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Nuevo.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Modificar.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Index.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Anular.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\_CmbPersona_DebitoBanco.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\_GridViewPartial_DebitoBanco_op.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\_GridViewPartial_DebitoBanco_op_x_cruzar.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\_GridViewPartial_DebitoBanco.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\Nuevo.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\Modificar.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\Index.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\Anular.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\_GridViewPartial_CreditoBanco.cshtml" />
+    <Content Include="Areas\Banco\Views\DepositoBanco\Nuevo.cshtml" />
+    <Content Include="Areas\Banco\Views\DepositoBanco\Modificar.cshtml" />
+    <Content Include="Areas\Banco\Views\DepositoBanco\Index.cshtml" />
+    <Content Include="Areas\Banco\Views\DepositoBanco\Anular.cshtml" />
+    <Content Include="Areas\Banco\Views\DepositoBanco\_GridViewPartial_DepositoBanco.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
@@ -8695,9 +8713,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\ActivoFijo\Models\" />
     <Folder Include="Areas\Banco\Models\" />
-    <Folder Include="Areas\Banco\Views\DepositoBanco\" />
-    <Folder Include="Areas\Banco\Views\NotaDeCreditoBanco\" />
-    <Folder Include="Areas\Banco\Views\NotaDeDebitoBanco\" />
     <Folder Include="Areas\Caja\Models\" />
     <Folder Include="Areas\Contabilidad\Models\" />
     <Folder Include="Areas\Contabilidad\Views\PuntoCargo\" />
