--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8649,6 +8649,7 @@
     <Content Include="Areas\Banco\Views\DepositoBanco\Anular.cshtml" />
     <Content Include="Areas\Banco\Views\DepositoBanco\_GridViewPartial_DepositoBanco.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_008.cshtml" />
+    <Content Include="Areas\Inventario\Views\IngresoInventario\_CmbProducto_IngresoInventario.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
