--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8651,7 +8651,7 @@
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_008.cshtml" />
     <Content Include="Areas\Inventario\Views\IngresoInventario\_CmbProducto_IngresoInventario.cshtml" />
     <Content Include="Areas\Inventario\Views\TransferenciasInventario\_CmbProducto_TransferenciaInventario.cshtml" />
-    <Content Include="Areas\Reportes\Views\InventarioReportes\_GridViewPartial_producto_lst.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\CmbProducto_Inventario.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
