--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Facturacion\fa_cliente_tipo_Bus.cs" />
     <Compile Include="Facturacion\fa_cliente_x_fa_Vendedor_x_sucursal_Bus.cs" />
     <Compile Include="Facturacion\fa_formaPago_Bus.cs" />
+    <Compile Include="Facturacion\fa_proforma_Bus.cs" />
     <Compile Include="Facturacion\fa_PuntoVta_Bus.cs" />
     <Compile Include="Facturacion\fa_TerminoPago_Bus.cs" />
     <Compile Include="Facturacion\fa_TerminoPago_Distribucion_Bus.cs" />
