--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8656,6 +8656,9 @@
     <Content Include="Areas\Reportes\Views\InventarioReportes\_GridViewPartial_producto_lst.cshtml" />
     <Content Include="Areas\Facturacion\Views\Proforma\Index.cshtml" />
     <Content Include="Areas\Facturacion\Views\Proforma\_GridViewPartial_proforma.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Proforma\Nuevo.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Proforma\Modificar.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Proforma\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
