--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -88,6 +88,25 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Info.cs" />
+    <Compile Include="CuentasPorPagar\ATS\compensacion.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleAir.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleAirCompras.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleAirRen.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleAnulados.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleCompras.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleExportacionesType.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleFideicomisosType.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detallefValor.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleRecapType.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosType.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosTypeAhorroPN.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosTypeCtaExenta.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosTypeDetRet.cs" />
+    <Compile Include="CuentasPorPagar\ATS\detalleVentas.cs" />
+    <Compile Include="CuentasPorPagar\ATS\iva.cs" />
+    <Compile Include="CuentasPorPagar\ATS\pagoExterior.cs" />
+    <Compile Include="CuentasPorPagar\ATS\reembolso.cs" />
+    <Compile Include="CuentasPorPagar\ATS\ventaEst.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Info.cs" />
