--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -778,6 +778,9 @@
     <Compile Include="Reportes\RRHH\ROL_012_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_013_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_014_Data.cs" />
+    <Compile Include="retenciones.cs">
+      <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
+    </Compile>
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
