--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -235,12 +235,24 @@
     <Compile Include="Areas\Banco\Controllers\CatalogoBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\CatalogoTipoBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\ChequeBancoController.cs" />
+    <Compile Include="Areas\Banco\Controllers\ConciliacionBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\DepositoBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\NotaDeCreditoBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\NotaDeDebitoBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\ParametroBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\TalonarioChequeBancoController.cs" />
     <Compile Include="Areas\Banco\Controllers\TipoNotaBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\BancoCuentaController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\CatalogoBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\CatalogoTipoBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\ChequeBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\ConciliacionBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\DepositoBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\NotaDeCreditoBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\NotaDeDebitoBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\ParametroBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\TalonarioChequeBancoController.cs" />
+    <Compile Include="Areas\Banco\Views\ConciliacionBanco\Controllers\TipoNotaBancoController.cs" />
     <Compile Include="Areas\Caja\CajaAreaRegistration.cs" />
     <Compile Include="Areas\Caja\Controllers\CajaController.cs" />
     <Compile Include="Areas\Caja\Controllers\CajaMovimientoEgresoController.cs" />
@@ -8668,6 +8680,11 @@
     <Content Include="Areas\Banco\Views\DepositoBanco\_GridViewPartial_DepositoBanco_x_cruzar.cshtml" />
     <Content Include="Areas\Banco\Views\DepositoBanco\_GridViewPartial_DepositoBanco_det.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\ATS\_GridViewPartial_retenciones.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\Nuevo.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\Modificar.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\Index.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\Anular.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\_GridViewPartial_ConciliacionBanco.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WEBRAPI.pubxml" />
