--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -57,7 +57,6 @@
     <Compile Include="Banco\ba_CatalogoTipo_Bus.cs" />
     <Compile Include="Banco\ba_Catalogo_Bus.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_Bus.cs" />
-    <Compile Include="Banco\ba_Conciliacion_Bus.cs" />
     <Compile Include="Banco\ba_parametros_Bus.cs" />
     <Compile Include="Banco\ba_Talonario_cheques_x_banco_Bus.cs" />
     <Compile Include="Banco\ba_tipo_nota_Bus.cs" />
@@ -89,6 +88,7 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Bus.cs" />
+    <Compile Include="CuentasPorPagar\ats_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Bus.cs" />
