--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -70,6 +70,31 @@
     <Compile Include="Caja\cp_conciliacion_Caja_det_Ing_Caja_Info.cs" />
     <Compile Include="Caja\cp_conciliacion_Caja_det_x_ValeCaja_Info.cs" />
     <Compile Include="Caja\cp_conciliacion_Caja_Info.cs" />
+    <Compile Include="Contabilidad\ATS\ATS_Info\ats_Info.cs" />
+    <Compile Include="Contabilidad\ATS\ATS_Info\compras_Info.cs" />
+    <Compile Include="Contabilidad\ATS\ATS_Info\comprobantesAnulados_info.cs" />
+    <Compile Include="Contabilidad\ATS\ATS_Info\importaciones_info.cs" />
+    <Compile Include="Contabilidad\ATS\ATS_Info\retenciones_Info.cs" />
+    <Compile Include="Contabilidad\ATS\ATS_Info\ventas_Info.cs" />
+    <Compile Include="Contabilidad\ATS\compensacion.cs" />
+    <Compile Include="Contabilidad\ATS\detalleAir.cs" />
+    <Compile Include="Contabilidad\ATS\detalleAirCompras.cs" />
+    <Compile Include="Contabilidad\ATS\detalleAirRen.cs" />
+    <Compile Include="Contabilidad\ATS\detalleAnulados.cs" />
+    <Compile Include="Contabilidad\ATS\detalleCompras.cs" />
+    <Compile Include="Contabilidad\ATS\detalleExportacionesType.cs" />
+    <Compile Include="Contabilidad\ATS\detalleFideicomisosType.cs" />
+    <Compile Include="Contabilidad\ATS\detallefValor.cs" />
+    <Compile Include="Contabilidad\ATS\detalleRecapType.cs" />
+    <Compile Include="Contabilidad\ATS\detalleRendFinancierosType.cs" />
+    <Compile Include="Contabilidad\ATS\detalleRendFinancierosTypeAhorroPN.cs" />
+    <Compile Include="Contabilidad\ATS\detalleRendFinancierosTypeCtaExenta.cs" />
+    <Compile Include="Contabilidad\ATS\detalleRendFinancierosTypeDetRet.cs" />
+    <Compile Include="Contabilidad\ATS\detalleVentas.cs" />
+    <Compile Include="Contabilidad\ATS\iva.cs" />
+    <Compile Include="Contabilidad\ATS\pagoExterior.cs" />
+    <Compile Include="Contabilidad\ATS\reembolso.cs" />
+    <Compile Include="Contabilidad\ATS\ventaEst.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Info.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_det_Info.cs" />
@@ -89,31 +114,6 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ATS_Info\ats_Info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ATS_Info\compras_Info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ATS_Info\comprobantesAnulados_info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ATS_Info\importaciones_info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ATS_Info\retenciones_Info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ATS_Info\ventas_Info.cs" />
-    <Compile Include="CuentasPorPagar\ATS\compensacion.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleAir.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleAirCompras.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleAirRen.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleAnulados.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleCompras.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleExportacionesType.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleFideicomisosType.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detallefValor.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleRecapType.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosType.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosTypeAhorroPN.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosTypeCtaExenta.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleRendFinancierosTypeDetRet.cs" />
-    <Compile Include="CuentasPorPagar\ATS\detalleVentas.cs" />
-    <Compile Include="CuentasPorPagar\ATS\iva.cs" />
-    <Compile Include="CuentasPorPagar\ATS\pagoExterior.cs" />
-    <Compile Include="CuentasPorPagar\ATS\reembolso.cs" />
-    <Compile Include="CuentasPorPagar\ATS\ventaEst.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Info.cs" />
